# qtmpc

./: CHANGELOG  CMakeLists.txt  INSTALL  QtMPC.notifyrc  QtMPC.pro  QtMPC.qrc  QtMPC_config.h  QtMPC_kde.qrc  QtMPCui.rc  database.dtd  hisc-apps-QtMPC.svgz  main.cpp
gui/: about_dialog.cpp  about_dialog.h  about_dialog.ui  dirviewitem.cpp  dirviewitem.h  dirviewitemdir.cpp  dirviewitemdir.h  dirviewitemfile.cpp  dirviewitemfile.h  dirviewitemroot.cpp  dirviewitemroot.h  dirviewmodel.cpp  dirviewmodel.h  dirviewproxymodel.cpp  dirviewproxymodel.h  main_window.cpp  main_window.h  main_window.ui  main_window_kde.ui  main_window_playlist.cpp  main_window_trayicon.cpp  musiclibraryitem.cpp  musiclibraryitem.h  musiclibraryitemalbum.cpp  musiclibraryitemalbum.h  musiclibraryitemartist.cpp  musiclibraryitemartist.h  musiclibraryitemroot.cpp  musiclibraryitemroot.h  musiclibraryitemsong.cpp  musiclibraryitemsong.h  musiclibrarymodel.cpp  musiclibrarymodel.h  musiclibrarysortfiltermodel.cpp  musiclibrarysortfiltermodel.h  playlisttablemodel.cpp  playlisttablemodel.h  preferences_dialog.cpp  preferences_dialog.h  preferences_dialog.ui  (+5 more)
lib/: lastfm_metadata_fetcher.cpp  lastfm_metadata_fetcher.h  lastfm_scrobbling.cpp  lastfm_scrobbling.h  mpdconnection.cpp  mpdconnection.h  mpddatabaseconnection.cpp  mpddatabaseconnection.h  mpdparseutils.cpp  mpdparseutils.h  mpdstats.cpp  mpdstats.h  mpdstatus.cpp  mpdstatus.h  song.cpp  song.h
